--- a/contents/coffeebeanstory.html
+++ b/contents/coffeebeanstory.html
@@ -9,11 +9,11 @@
         href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nanum+Gothic&display=swap"
         rel="stylesheet">
     <!--style-->
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="css/coffeebeanstory.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="/coffeebean-demo/css/reset.css">
+    <link rel="stylesheet" href="/coffeebean-demo/css/common.css">
+    <link rel="stylesheet" href="/coffeebean-demo/css/header.css">
+    <link rel="stylesheet" href="/coffeebean-demo/contents/css/coffeebeanstory.css">
+    <link rel="stylesheet" href="/coffeebean-demo/css/footer.css">
 </head>
 
 <body>
@@ -29,14 +29,14 @@
             </ul>
         </div>
         <div class="header-bottom">
-            <h1 class="logo"><a href="../index.html"><img src="img/logo.png" alt="커피빈코리아 로고"></a></h1>
+            <h1 class="logo"><a href="/coffeebean-demo/index.html"><img src="img/logo.png" alt="커피빈코리아 로고"></a></h1>
             <nav class="gnb">
                 <ul>
                     <li><a href="#">Buy online</a></li>
                     <li><a href="#">Member's club</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Store</a></li>
-                    <li class="active"><a href="coffeebeanstory.html">The Coffee Bean</a></li>
+                    <li class="active"><a href="/coffeebean-demo/contents/coffeebeanstory.html">The Coffee Bean</a></li>
                     <li><a href="#">CBTL</a></li>
                 </ul>
             </nav>
